--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "url-exists": "^1.0.3"
   }
 }
