--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase": "^10.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
     "url-exists": "^1.0.3"
